Added user validation and tests
Validation in the GUI screens is not yet implemented